alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: alpine
  name: alpine
spec:
  containers:
  - args:
    - sleep
    - "20000"
    image: alpine/curl
    name: alpine
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
