backend.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      meta.helm.sh/release-name: my-vikunja
      meta.helm.sh/release-namespace: default
    creationTimestamp: "2023-12-05T19:21:12Z"
    generation: 4
    labels:
      app.kubernetes.io/instance: my-vikunja
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: vikunja
      app.kubernetes.io/version: 0.17.0
      helm.sh/chart: vikunja-6.1.2
    name: my-vikunja
    namespace: default
    resourceVersion: "37488"
    uid: bbb6f74b-e07b-42a4-9112-20b9c0110379
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 3
    selector:
      matchLabels:
        app.kubernetes.io/instance: my-vikunja
        app.kubernetes.io/name: vikunja
    strategy:
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app.kubernetes.io/instance: my-vikunja
          app.kubernetes.io/name: vikunja
      spec:
        automountServiceAccountToken: true
        containers:
        - image: caddy:2.4.2-alpine
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          name: my-vikunja
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/caddy/Caddyfile
            name: caddy-config
            subPath: Caddyfile
          - mountPath: /etc/vikunja/config.yml
            name: vikunja-config
            subPath: Vikunja.yaml
        - image: vikunja/api:0.17.1
          imagePullPolicy: IfNotPresent
          name: api
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/vikunja/config.yml
            name: vikunja-config
            subPath: Vikunja.yaml
        - image: vikunja/frontend:0.17.0
          imagePullPolicy: IfNotPresent
          name: frontend
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        enableServiceLinks: true
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: default
        serviceAccountName: default
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: my-vikunja-config
          name: caddy-config
        - configMap:
            defaultMode: 420
            name: my-vikunja-config
          name: vikunja-config
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-12-05T19:21:12Z"
      lastUpdateTime: "2023-12-05T19:21:23Z"
      message: ReplicaSet "my-vikunja-666fd8877f" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2023-12-05T21:43:41Z"
      lastUpdateTime: "2023-12-05T21:43:41Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 4
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
